fix dark mode issues

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1767,6 +1767,10 @@ body {
   gap: 2rem;
 }
 
+.gap-10 {
+  gap: 2.5rem;
+}
+
 .gap-x-4 {
   -moz-column-gap: 1rem;
        column-gap: 1rem;
